--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.layout__wrapper {
+  border-radius: 3px;
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.25);
+  margin: 3rem auto;
+  max-width: 370px;
+}
+
+.card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.store-container {
   text-align: center;
+  padding: 5px;
+  background-color: rgb(94, 122, 247);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.items-container {
+  text-align: center;
+  background-color: rgb(242, 242, 242);
+  min-height: 95px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-container {
+  padding: 5px;
+  border-bottom: 1px solid grey;
+  background-color: #adc1aa;
 }
